Improve and refactor sidebar

--- a/css/vscode.css
+++ b/css/vscode.css
@@ -9,51 +9,56 @@
 body {
 	padding: 0 var(--container-padding);
 	color: var(--vscode-foreground);
-	font-size: var(--vscode-font-size);
-	font-weight: var(--vscode-font-weight);
-	font-family: var(--vscode-font-family);
 	background-color: var(--vscode-editor-background);
-}
-
-ol,
-ul {
-	padding-left: var(--container-padding);
-}
-
-body > *,
-form > * {
-	margin-block-start: var(--input-margin-vertical);
-	margin-block-end: var(--input-margin-vertical);
 }
 
 *:focus {
 	outline-color: var(--vscode-focusBorder) !important;
 }
 
-a {
-	color: var(--vscode-textLink-foreground);
+#status, #server-data {
+	padding: 1rem 0;
 }
 
-a:hover,
-a:active {
-	color: var(--vscode-textLink-activeForeground);
+#buttons {
+	flex-direction: column;
+	gap: 5px;
 }
 
-code {
-	font-size: var(--vscode-editor-font-size);
-	font-family: var(--vscode-editor-font-family);
+#buttons > div {
+	display: flex;
+}
+
+/* FIXME: PLEASE SOMEONE THIS IS SO BAD CAN SOMEONE MAKE IT NOT SHIT */
+#buttons > div button {
+	height: calc(1em + 4px);
+    width: calc(1em + 4px);
+	margin-left: 3px;
+    aspect-ratio: 1;
+    box-sizing: content-box;
+    padding: var(--input-padding-vertical);
+	transition: .3s ease;
+}
+
+#buttons > div button.unchanged { /* Selector has to be weird because of specificity */
+	width: 0;
+	margin: 0;
+	padding: var(--input-padding-vertical) 0;
+}
+
+#start-stop-button {
+	width: 100% !important;
+	margin: 0 !important;
 }
 
 button {
 	border: none;
 	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
 	width: 100%;
-	text-align: center;
 	outline: 1px solid transparent;
 	outline-offset: 2px !important;
 	color: var(--vscode-button-foreground);
 	background: var(--vscode-button-background);
-	margin-top: 5px;
 }
 
 button:hover {
@@ -61,32 +66,24 @@ button:hover {
 	background: var(--vscode-button-hoverBackground);
 }
 
-/* button:focus {
+button:focus {
 	outline-color: var(--vscode-focusBorder);
-} */
-
-button.secondary {
-	color: var(--vscode-button-secondaryForeground);
-	background: var(--vscode-button-secondaryBackground);
 }
 
-button.secondary:hover {
-	background: var(--vscode-button-secondaryHoverBackground);
-}
-
-input:not([type='checkbox']),
-textarea {
-	display: block;
+input {
 	width: 100%;
 	border: none;
 	font-family: var(--vscode-font-family);
 	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
 	color: var(--vscode-input-foreground);
-	outline-color: var(--vscode-input-border);
 	background-color: var(--vscode-input-background);
 }
 
 input::placeholder,
 textarea::placeholder {
 	color: var(--vscode-input-placeholderForeground);
+}
+
+img {
+	user-select: none;
 }
