--- a/css/vscode.css
+++ b/css/vscode.css
@@ -1,3 +1,6 @@
+/* this was kinda pointless
+*/
+
 :root {
 	--container-padding: 20px;
 	--input-padding-vertical: 6px;
@@ -44,6 +47,25 @@ code {
 	font-family: var(--vscode-editor-font-family);
 }
 
+#buttons {
+	flex-direction: column;
+	gap: 5px;
+}
+
+#buttons > div {
+	display: flex;
+	gap: 3px;
+}
+
+/* FIXME: PLEASE SOMEONE THIS IS SO BAD CAN SOMEONE MAKE IT NOT SHIT */
+#buttons > div button {
+	height: calc(1em + 4px);
+    width: calc(1em + 4px);
+    aspect-ratio: 1;
+    box-sizing: content-box;
+    padding: var(--input-padding-vertical);
+}
+
 button {
 	border: none;
 	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
@@ -53,7 +75,6 @@ button {
 	outline-offset: 2px !important;
 	color: var(--vscode-button-foreground);
 	background: var(--vscode-button-background);
-	margin-top: 5px;
 }
 
 button:hover {
@@ -61,7 +82,7 @@ button:hover {
 	background: var(--vscode-button-hoverBackground);
 }
 
-/* button:focus {
+button:focus {
 	outline-color: var(--vscode-focusBorder);
 } */
 
@@ -74,9 +95,8 @@ button.secondary:hover {
 	background: var(--vscode-button-secondaryHoverBackground);
 }
 
-input:not([type='checkbox']),
-textarea {
-	display: block;
+input
+{
 	width: 100%;
 	border: none;
 	font-family: var(--vscode-font-family);
