--- a/css/vscode.css
+++ b/css/vscode.css
@@ -27,16 +27,23 @@ body {
 
 #buttons > div {
 	display: flex;
-	gap: 3px;
 }
 
 /* FIXME: PLEASE SOMEONE THIS IS SO BAD CAN SOMEONE MAKE IT NOT SHIT */
 #buttons > div button {
 	height: calc(1em + 4px);
     width: calc(1em + 4px);
+	margin-left: 3px;
     aspect-ratio: 1;
     box-sizing: content-box;
     padding: var(--input-padding-vertical);
+	transition: .3s ease;
+}
+
+#buttons > div button.unchanged { /* Selector has to be weird because of specificity */
+	width: 0;
+	margin: 0;
+	padding: var(--input-padding-vertical) 0;
 }
 
 button {
