--- a/css/vscode.css
+++ b/css/vscode.css
@@ -46,6 +46,11 @@ body {
 	padding: var(--input-padding-vertical) 0;
 }
 
+#start-stop-button {
+	width: 100% !important;
+	margin: 0 !important;
+}
+
 button {
 	border: none;
 	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
