make sidebar UI into a music player

--- a/css/vscode.css
+++ b/css/vscode.css
@@ -1,120 +1,1 @@
-:root {
-    --container-padding: 20px;
-    --input-padding-vertical: 6px;
-    --input-padding-horizontal: 4px;
-    --input-margin-vertical: 4px;
-    --input-margin-horizontal: 0;
-}
-
-body {
-    padding: 0 var(--container-padding);
-    color: var(--vscode-foreground);
-    background-color: var(--vscode-editor-background);
-}
-
-*:focus {
-    outline-color: var(--vscode-focusBorder) !important;
-}
-
-#status, #server-data {
-    padding: 1rem 0;
-}
-
-#buttons {
-    flex-direction: column;
-    gap: 5px;
-}
-
-#buttons > div {
-    display: flex;
-}
-
-#buttons > div img {
-    aspect-ratio: 1;
-    box-sizing: content-box;
-    padding: var(--input-padding-vertical);
-    transition: .3s ease;
-}
-
-#buttons > div img.checkmark {
-    margin-left: 4px;
-    height: calc(1em + 4px);
-}
-
-#buttons > div img.unchanged { /* Selector has to be weird because of specificity */
-    width: 0;
-    margin: 0;
-    padding: var(--input-padding-vertical) 0;
-}
-
-button, img {
-    border: none;
-    padding: var(--input-padding-vertical) var(--input-padding-horizontal);
-    outline: 1px solid transparent;
-    outline-offset: 2px !important;
-    color: var(--vscode-button-foreground);
-    background: var(--vscode-button-background);
-}
-
-button:hover {
-    cursor: pointer;
-    background: var(--vscode-button-hoverBackground);
-}
-
-button:focus {
-    outline-color: var(--vscode-focusBorder);
-}
-
-#connect-button {
-	width: 100%; /* Make the connection button stretch */
-}
-
-#play-buttons {
-    gap: 4px; /* Create horizontal space between buttons */
-    height: 28px; /* Set the same height as other buttons (otherwise image would expland the container) */
-}
-
-#play-buttons button {
-    flex-grow: 1; /* Allow the buttons to expand to fill the available area */
-}
-
-#restart-button {
-    padding-top: 0.2em;
-    padding-bottom: 0.2em;
-}
-
-#rate {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-	height: 28px;
-}
-
-#rate-input-slider {
-    width: 100%;
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 1em;
-}
-
-#rate-input-text {
-    width: 2.5em;
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-}
-
-input {
-    width: 100%;
-    border: none;
-    font-family: var(--vscode-font-family);
-    padding: var(--input-padding-vertical) var(--input-padding-horizontal);
-    color: var(--vscode-input-foreground);
-    background-color: var(--vscode-input-background);
-}
-
-/* Improve the color of placeholders */
-input::placeholder,
-textarea::placeholder {
-    color: var(--vscode-input-placeholderForeground);
-}
+body{display:flex;flex-direction:column;gap:20px;padding:20px;background:var(--vscode-editor-background)}*:focus{outline-color:var(--vscode-focusBorder) !important}button{padding:6px;color:var(--vscode-button-foreground);background:var(--vscode-button-background);border:none;outline:1px solid transparent;outline-offset:2px !important;text-align:center;cursor:pointer}button:hover{background:var(--vscode-button-hoverBackground)}button:focus{outline-color:var(--vscode-focusBorder)}button[disabled]{background:var(--vscode-button-secondaryBackground);cursor:not-allowed}input{width:100%;padding:6px;color:var(--vscode-input-foreground);background:var(--vscode-input-background);border:none;font-family:var(--vscode-font-family)}::placeholder{color:var(--vscode-input-placeholderForeground)}#connection{display:flex;justify-content:space-between}#connection #connect-button{background:var(--vscode-charts-green);height:25px;padding:.7rem}#connection #connect-button.disconnected{background:var(--vscode-charts-red)}#buttons{flex-direction:column;gap:20px}#buttons #play-buttons{display:flex;align-items:center;justify-content:center;gap:12px}#buttons #play-buttons img{height:30px;cursor:pointer;transition:.2s cubic-bezier(0.34, 0.12, 0.07, 1.17)}#buttons #play-buttons img:active{transform:scale(0.9)}#buttons #play-buttons img:not(#start-button):hover{filter:brightness(0.7)}#buttons #mode-select{display:flex;align-items:center;position:relative;padding:6px;background:var(--vscode-input-background)}#buttons #mode-select .highlight{position:absolute;top:6px;left:6px;width:calc(50% - 6px);height:calc(100% - 2 * 6px);background:var(--vscode-button-background);transition:.2s cubic-bezier(0.34, 0.12, 0.07, 1.17)}#buttons #mode-select span{width:100%;padding:6px;color:var(--vscode-button-foreground);text-align:center;cursor:pointer;z-index:0}#buttons #rate{display:flex;width:100%;height:28px}#buttons #rate #rate-input-slider{width:100%;margin-right:4px}#buttons #rate #rate-input-text{width:3rem;text-align:center}#buttons #tick-control{display:grid;grid-template-columns:auto 1fr auto;align-items:center;gap:8px 4px;position:relative}#buttons #tick-control #link{display:grid;grid-row:1/3;grid-column:3;position:relative;width:25px;padding:4px 0;background:var(--vscode-editor-background);cursor:pointer;transition:.2s cubic-bezier(0.34, 0.12, 0.07, 1.17)}#buttons #tick-control #link #link-disabled{position:absolute;inset:6px 11px;background:var(--vscode-editor-foreground);outline:2px solid var(--vscode-editor-background);border-radius:1rem;opacity:1;transform:rotate(45deg);transition:opacity .2s ease,inset .4s ease}#buttons #tick-control #link #link-disabled.invisible{inset:16px 11px;opacity:0;transition:opacity .2s ease .2s,inset .4s ease}#buttons #tick-control #link:active{transform:scale(0.9)}#buttons #tick-control::after{content:"";display:block;position:absolute;inset:12px;left:calc(100% - 24px);border:1px solid var(--vscode-editor-foreground);border-left:none;z-index:-1}#buttons #tick-control [disabled]{opacity:.5;cursor:not-allowed}.input{display:flex}.input img.checkmark{height:calc(1em + 4px);aspect-ratio:1;margin-left:4px;padding:6px;background:var(--vscode-button-background);outline:1px solid transparent;outline-offset:2px !important;transition:.2s cubic-bezier(0.34, 0.12, 0.07, 1.17);box-sizing:content-box}.input img.unchanged{width:0;margin:0;padding:6px 0}.heavy-button{height:30px;padding:1rem;background:var(--vscode-button-background);border-radius:50%;box-sizing:initial;cursor:pointer;transition:.2s cubic-bezier(0.34, 0.12, 0.07, 1.17)}.heavy-button:hover{background:var(--vscode-button-hoverBackground)}.heavy-button:active{transform:scale(0.9)}
