--- a/css/reset.css
+++ b/css/reset.css
@@ -1,12 +1,14 @@
-html {
-	box-sizing: border-box;
-	font-size: 13px;
+html
+{
+    box-sizing: border-box;
+    font-size: 13px;
 }
 
 *,
 *:before,
-*:after {
-	box-sizing: inherit;
+*:after
+{
+    box-sizing: inherit;
 }
 
 body,
@@ -18,13 +20,15 @@ h5,
 h6,
 p,
 ol,
-ul {
-	margin: 0;
-	padding: 0;
-	font-weight: normal;
+ul
+{
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
 }
 
-img {
-	max-width: 100%;
-	height: auto;
+img
+{
+    max-width: 100%;
+    height: auto;
 }
